catalog/pattern-catalog-fn/src/main/java/com/tibco/cep/pattern/dsl/patternParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g 2014-04-11 11:18:06

	package com.tibco.cep.pattern.dsl; 

	import com.tibco.cep.pattern.dsl.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class patternParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEFINE_PATTERN_TOKEN", "USING_TOKEN", "EVENT_LIST_TOKEN", "EVENT_TOKEN", "SUBSCRIPTION_LIST_TOKEN", "SUBSCRIPTION_TOKEN", "MATCH_TOKEN", "WHERE_TOKEN", "STARTS_WITH_TOKEN", "ITEM_TOKEN", "ANY_ONE_TOKEN", "ALL_TOKEN", "SUBPATTERN_ITEM_TOKEN", "THEN_TOKEN", "THEN_ANY_ONE_TOKEN", "THEN_ALL_TOKEN", "THEN_REPEAT_TOKEN", "THEN_WITHIN_TOKEN", "THEN_DURING_TOKEN", "THEN_AFTER_TOKEN", "REPEAT_TOKEN", "DATE_TOKEN", "DATETIME_TOKEN", "BIND_TOKEN", "STRING_TOKEN", "BOOLEAN_TOKEN", "INTEGER_TOKEN", "LONG_TOKEN", "FLOAT_TOKEN", "DOUBLE_TOKEN", "LITERAL_TOKEN", "NEWLINE", "DEFINE", "PATTERN", "USING", "EVENT", "AS", "WHERE", "AND", "SUCH", "THAT", "STARTS", "WITH", "ANY", "ONE", "ALL", "THEN", "REPEAT", "WITHIN", "DURING", "TO", "TIMES", "AFTER", "DAYS", "HOURS", "MINUTES", "SECONDS", "MILLISECONDS", "TRUE", "FALSE", "NULL", "ESCAPE_SPACE", "ESCAPE_KEYWORD", "COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "BIND_SYMBOL", "QUOTES", "CHAR", "DIGIT", "SIGN", "LONG_SUFFIX", "DOUBLE_SUFFIX", "SIGNED", "UNSIGNED", "LONG", "FLOAT", "DOUBLE", "NameFirstCharacter", "NameCharacter", "IDENTIFIER", "NAME", "WHITESPACE", "ALLCHARS", "'$date('", "'$datetime('", "'='", "'.'"
    };
    public static final int SIGN=77;
    public static final int SIGNED=80;
    public static final int CHAR=75;
    public static final int THEN_REPEAT_TOKEN=20;
    public static final int ONE=48;
    public static final int QUOTES=74;
    public static final int EOF=-1;
    public static final int STRING_TOKEN=28;
    public static final int PATTERN=37;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int RPAREN=70;
    public static final int NAME=88;
    public static final int T__92=92;
    public static final int THAT=44;
    public static final int USING_TOKEN=5;
    public static final int USING=38;
    public static final int SUBSCRIPTION_LIST_TOKEN=8;
    public static final int LONG_TOKEN=31;
    public static final int LITERAL_TOKEN=34;
    public static final int BIND_SYMBOL=73;
    public static final int DOUBLE=84;
    public static final int SUCH=43;
    public static final int THEN_AFTER_TOKEN=23;
    public static final int RBRACE=72;
    public static final int NameFirstCharacter=85;
    public static final int NULL=64;
    public static final int ESCAPE_KEYWORD=66;
    public static final int DOUBLE_TOKEN=33;
    public static final int WHITESPACE=89;
    public static final int LONG_SUFFIX=78;
    public static final int BOOLEAN_TOKEN=29;
    public static final int ALL_TOKEN=15;
    public static final int MATCH_TOKEN=10;
    public static final int REPEAT_TOKEN=24;
    public static final int EVENT_TOKEN=7;
    public static final int MILLISECONDS=61;
    public static final int DEFINE_PATTERN_TOKEN=4;
    public static final int STARTS_WITH_TOKEN=12;
    public static final int STARTS=45;
    public static final int THEN_ANY_ONE_TOKEN=18;
    public static final int WITHIN=52;
    public static final int ESCAPE_SPACE=65;
    public static final int REPEAT=51;
    public static final int DURING=53;
    public static final int NameCharacter=86;
    public static final int THEN_DURING_TOKEN=22;
    public static final int DATETIME_TOKEN=26;
    public static final int FALSE=63;
    public static final int THEN_WITHIN_TOKEN=21;
    public static final int WHERE=41;
    public static final int BIND_TOKEN=27;
    public static final int SUBSCRIPTION_TOKEN=9;
    public static final int LBRACE=71;
    public static final int ITEM_TOKEN=13;
    public static final int SECONDS=60;
    public static final int FLOAT=83;
    public static final int SUBPATTERN_ITEM_TOKEN=16;
    public static final int AND=42;
    public static final int DEFINE=36;
    public static final int LPAREN=69;
    public static final int AS=40;
    public static final int THEN=50;
    public static final int COMMA=67;
    public static final int IDENTIFIER=87;
    public static final int ALL=49;
    public static final int DIGIT=76;
    public static final int ANY_ONE_TOKEN=14;
    public static final int WITH=46;
    public static final int ALLCHARS=90;
    public static final int TO=54;
    public static final int THEN_TOKEN=17;
    public static final int EVENT_LIST_TOKEN=6;
    public static final int WHERE_TOKEN=11;
    public static final int INTEGER_TOKEN=30;
    public static final int AFTER=56;
    public static final int EVENT=39;
    public static final int TRUE=62;
    public static final int SEMI=68;
    public static final int THEN_ALL_TOKEN=19;
    public static final int MINUTES=59;
    public static final int DOUBLE_SUFFIX=79;
    public static final int DAYS=57;
    public static final int DATE_TOKEN=25;
    public static final int ANY=47;
    public static final int UNSIGNED=81;
    public static final int NEWLINE=35;
    public static final int FLOAT_TOKEN=32;
    public static final int TIMES=55;
    public static final int LONG=82;
    public static final int HOURS=58;

    // delegates
    // delegators


        public patternParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public patternParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return patternParser.tokenNames; }
    public String getGrammarFileName() { return "Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g"; }


    	ExceptionHandler handler = new ExceptionHandler();
    	
    	public LanguageException createException(IntStream intStream) {
    		CommonTokenStream cts = (CommonTokenStream) intStream;
    		patternLexer pl = (patternLexer) cts.getTokenSource();
    		PatternLanguageLexer pll = new PatternLanguageLexer(pl);
    		ANTLRStringStream acs = (ANTLRStringStream) pll.getInputSource();
    		String inputText = acs.substring(0, acs.size()-1);
    		int errorline = cts.LT(1).getLine();
    		int errorpos = cts.LT(1).getCharPositionInLine();
           		if (errorpos < 0) { //backtrack since token is missing or invalid
    			errorline = cts.LT(-1).getLine();
        			errorpos = ((CommonToken) cts.LT(-1)).getStopIndex()+1;
    			return new LanguageException("Error on line " + errorline + " at position " + errorpos + ":" + 
    			inputText.substring(0, errorpos) + "^" + inputText.substring(errorpos), inputText, errorpos);
           		}
    		return new LanguageException("Error on line " + errorline + " at position " + errorpos + ":" + 
    			inputText.substring(0, errorpos) + "^" + inputText.substring(errorpos), inputText, errorpos);
    	}
    	
    	public void mismatch(IntStream intStream, int ttype, BitSet follow) 
    			throws RecognitionException {
    		handler.addException(createException(intStream));
    	}
    	
    	protected Object recoverFromMismatchedToken(IntStream intStream, int i, BitSet bitSet) 
    			throws RecognitionException { 
    		handler.addException(createException(intStream));
    		return null;
    	}

    	public Object recoverFromMismatchedSet(IntStream intStream, RecognitionException e, BitSet follow) 
    			throws RecognitionException {
    		handler.addException(createException(intStream));
    		return null;
    	}
    	
    	public ExceptionHandler getExceptionHandler() {
    	        return handler;
    	}


    public static class digits_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "digits"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:219:1: digits : ( SIGNED | UNSIGNED );
    public final patternParser.digits_return digits() throws RecognitionException {
        patternParser.digits_return retval = new patternParser.digits_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set1=null;

        Object set1_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:219:10: ( SIGNED | UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:
            {
            root_0 = (Object)adaptor.nil();

            set1=(Token)input.LT(1);
            if ( (input.LA(1)>=SIGNED && input.LA(1)<=UNSIGNED) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set1));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }


        	catch(RecognitionException e2) { 
        		handler.addException(createException(input));
        		throw e2;
        	} catch(Exception e3) { 
        		//ignore only rewrite empty stream exception
        		if (! (e3 instanceof RewriteEmptyStreamException || e3 instanceof RewriteEarlyExitException ||
        			e3 instanceof LanguageException) ) {
        			LanguageException le = new LanguageException(e3);
        			handler.addException(le);
        		}
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "digits"

    public static class year_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "year"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:221:1: year : UNSIGNED ;
    public final patternParser.year_return year() throws RecognitionException {
        patternParser.year_return retval = new patternParser.year_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token UNSIGNED2=null;

        Object UNSIGNED2_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:221:8: ( UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:221:10: UNSIGNED
            {
            root_0 = (Object)adaptor.nil();

            UNSIGNED2=(Token)match(input,UNSIGNED,FOLLOW_UNSIGNED_in_year1386); 
            UNSIGNED2_tree = (Object)adaptor.create(UNSIGNED2);
            adaptor.addChild(root_0, UNSIGNED2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }


        	catch(RecognitionException e2) { 
        		handler.addException(createException(input));
        		throw e2;
        	} catch(Exception e3) { 
        		//ignore only rewrite empty stream exception
        		if (! (e3 instanceof RewriteEmptyStreamException || e3 instanceof RewriteEarlyExitException ||
        			e3 instanceof LanguageException) ) {
        			LanguageException le = new LanguageException(e3);
        			handler.addException(le);
        		}
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "year"

    public static class month_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "month"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:222:1: month : UNSIGNED ;
    public final patternParser.month_return month() throws RecognitionException {
        patternParser.month_return retval = new patternParser.month_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token UNSIGNED3=null;

        Object UNSIGNED3_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:222:9: ( UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:222:11: UNSIGNED
            {
            root_0 = (Object)adaptor.nil();

            UNSIGNED3=(Token)match(input,UNSIGNED,FOLLOW_UNSIGNED_in_month1395); 
            UNSIGNED3_tree = (Object)adaptor.create(UNSIGNED3);
            adaptor.addChild(root_0, UNSIGNED3_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }


        	catch(RecognitionException e2) { 
        		handler.addException(createException(input));
        		throw e2;
        	} catch(Exception e3) { 
        		//ignore only rewrite empty stream exception
        		if (! (e3 instanceof RewriteEmptyStreamException || e3 instanceof RewriteEarlyExitException ||
        			e3 instanceof LanguageException) ) {
        			LanguageException le = new LanguageException(e3);
        			handler.addException(le);
        		}
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "month"

    public static class day_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "day"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:223:1: day : UNSIGNED ;
    public final patternParser.day_return day() throws RecognitionException {
        patternParser.day_return retval = new patternParser.day_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token UNSIGNED4=null;

        Object UNSIGNED4_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:223:7: ( UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:223:9: UNSIGNED
            {
            root_0 = (Object)adaptor.nil();

            UNSIGNED4=(Token)match(input,UNSIGNED,FOLLOW_UNSIGNED_in_day1404); 
            UNSIGNED4_tree = (Object)adaptor.create(UNSIGNED4);
            adaptor.addChild(root_0, UNSIGNED4_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }


        	catch(RecognitionException e2) { 
        		handler.addException(createException(input));
        		throw e2;
        	} catch(Exception e3) { 
        		//ignore only rewrite empty stream exception
        		if (! (e3 instanceof RewriteEmptyStreamException || e3 instanceof RewriteEarlyExitException ||
        			e3 instanceof LanguageException) ) {
        			LanguageException le = new LanguageException(e3);
        			handler.addException(le);
        		}
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "day"

    public static class hour_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "hour"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:224:1: hour : UNSIGNED ;
    public final patternParser.hour_return hour() throws RecognitionException {
        patternParser.hour_return retval = new patternParser.hour_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token UNSIGNED5=null;

        Object UNSIGNED5_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:224:8: ( UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:224:10: UNSIGNED
            {
            root_0 = (Object)adaptor.nil();

            UNSIGNED5=(Token)match(input,UNSIGNED,FOLLOW_UNSIGNED_in_hour1413); 
            UNSIGNED5_tree = (Object)adaptor.create(UNSIGNED5);
            adaptor.addChild(root_0, UNSIGNED5_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }


        	catch(RecognitionException e2) { 
        		handler.addException(createException(input));
        		throw e2;
        	} catch(Exception e3) { 
        		//ignore only rewrite empty stream exception
        		if (! (e3 instanceof RewriteEmptyStreamException || e3 instanceof RewriteEarlyExitException ||
        			e3 instanceof LanguageException) ) {
        			LanguageException le = new LanguageException(e3);
        			handler.addException(le);
        		}
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "hour"

    public static class minute_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "minute"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:225:1: minute : UNSIGNED ;
    public final patternParser.minute_return minute() throws RecognitionException {
        patternParser.minute_return retval = new patternParser.minute_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token UNSIGNED6=null;

        Object UNSIGNED6_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:225:10: ( UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:225:12: UNSIGNED
            {
            root_0 = (Object)adaptor.nil();

            UNSIGNED6=(Token)match(input,UNSIGNED,FOLLOW_UNSIGNED_in_minute1422); 
            UNSIGNED6_tree = (Object)adaptor.create(UNSIGNED6);
            adaptor.addChild(root_0, UNSIGNED6_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }


        	catch(RecognitionException e2) { 
        		handler.addException(createException(input));
        		throw e2;
        	} catch(Exception e3) { 
        		//ignore only rewrite empty stream exception
        		if (! (e3 instanceof RewriteEmptyStreamException || e3 instanceof RewriteEarlyExitException ||
        			e3 instanceof LanguageException) ) {
        			LanguageException le = new LanguageException(e3);
        			handler.addException(le);
        		}
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "minute"

    public static class second_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "second"
    // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:226:1: second : UNSIGNED ;
    public final patternParser.second_return second() throws RecognitionException {
        patternParser.second_return retval = new patternParser.second_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token UNSIGNED7=null;

        Object UNSIGNED7_tree=null;

        try {
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:226:10: ( UNSIGNED )
            // Q:\\be\\branches\\5.2\\runtime\\modules\\pattern\\pattern-lang\\src\\com\\tibco\\cep\\pattern\\dsl\\pattern.g:226:12: UNSIGNED
            {
            root_0 = (Object)adaptor.nil();

            UNSIGNED7=(Token)match(input,UNSIGNED,FOLLOW_UNSIGNED_in_second1431); 
            UNSIGNED7_tree = (Object)adaptor.create(UNSIGNED7);
            adaptor.addChild(root_0, UNSIGNED7_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
